--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="./js/rps.js"></script>
 </head>
 <body>
-    
+    <div class="header">Header</div>
+    <div class="main">Main</div>
+    <div class="footer">Footer</div>
 </body>
 </html>
