feat: add html layout

--- a/index.html
+++ b/index.html
@@ -7,8 +7,29 @@
     <script src="./js/rps.js"></script>
 </head>
 <body>
-    <div class="header">Header</div>
-    <div class="main">Main</div>
+    <div class="header">Rock Paper Scissors</div>
+    <div class="main">
+        
+        <div class="rps-container">
+            <button class="rps">Rock</button>
+            <button class="rps">Paper</button>
+            <button class="rps">Scissors</button>
+        </div>
+
+        <div class="round-description">
+            <div class="player-hand">Player Hand</div>
+            <div class="scoreboard">
+                <span>Player</span>
+                <span>0 : 0</span>
+                <span>Computer</span>
+            </div>
+            <div class="computer-hand">"Computer Hand"</div>
+        </div>
+
+        <div class="final-result">
+            
+        </div>
+    </div>
     <div class="footer">Footer</div>
 </body>
 </html>
