feat: add styling to header and main

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <script src="./js/rps.js"></script>
+    <link rel="stylesheet" href="./style/styles.css">
 </head>
 <body>
     <div class="header">Rock Paper Scissors</div>
@@ -27,7 +28,7 @@
         </div>
 
         <div class="final-result">
-            
+
         </div>
     </div>
     <div class="footer">Footer</div>
