feat: add styling for scoreboard and footer

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div class="player-hand">Player Hand</div>
             <div class="scoreboard">
                 <span>Player</span>
-                <span>0 : 0</span>
+                <span id="score">0 : 0</span>
                 <span>Computer</span>
             </div>
-            <div class="computer-hand">"Computer Hand"</div>
+            <div class="computer-hand">Computer Hand</div>
         </div>
 
         <div class="final-result">
