--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="./js/rps.js"></script>
+    <script src="./js/rps.js" defer></script>
     <link rel="stylesheet" href="./style/styles.css">
 </head>
 <body>
