feat: add gameplay and dom integration logic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <button class="rps">Paper</button>
             <button class="rps">Scissors</button>
         </div>
-
+        <div class="reset-container hidden">
+            <button id="reset-btn">Reset Game</button>
+        </div>
         <div class="round-description">
             <div class="player-hand">Player Hand</div>
             <div class="scoreboard">
