feat: update footer and game hand style

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
         </div>
     </div>
-    <div class="footer">Footer</div>
+    <div class="footer"> made by 
+        <a href="https://github.com/namesarehard123" target="_blank">namesarehard</a></div>
 </body>
 </html>
